<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_backdrop"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/image"
            tools:src="@color/colorPrimary"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/img_poster"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_marginTop="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/image"
            app:layout_constraintTop_toBottomOf="@id/img_backdrop"
            app:layout_constraintStart_toStartOf="parent"
            tools:src="@color/colorAccent" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="3"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginStart="22dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintStart_toEndOf="@id/img_poster"
            app:layout_constraintTop_toBottomOf="@id/img_backdrop"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Movie Title" />

        <TextView
            android:id="@+id/tv_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            app:layout_constraintStart_toEndOf="@id/img_poster"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            tools:text="2019" />

        <TextView
            android:id="@+id/tv_ratings"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_poster"
            android:textStyle="bold"
            tools:text="0.0"/>
        <TextView
            android:id="@+id/tv_ratings_title"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_ratings"
            android:text="@string/ratings"/>

        <View
            android:id="@+id/separator_line1"
            android:layout_width="1dp"
            android:layout_height="35dp"
            app:layout_constraintTop_toBottomOf="@id/img_poster"
            app:layout_constraintStart_toEndOf="@id/tv_ratings"
            android:layout_marginTop="25dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_centerVertical="true"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:id="@+id/tv_language"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="24dp"
            android:textAllCaps="true"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/separator_line1"
            app:layout_constraintTop_toBottomOf="@id/img_poster"
            tools:text="en" />
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            app:layout_constraintStart_toEndOf="@id/separator_line1"
            app:layout_constraintTop_toBottomOf="@id/tv_language"
            android:text="@string/language" />

        <View
            android:id="@+id/separator_line2"
            android:layout_width="1dp"
            android:layout_height="35dp"
            app:layout_constraintTop_toBottomOf="@id/img_poster"
            app:layout_constraintStart_toEndOf="@id/tv_language"
            android:layout_marginTop="25dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_centerVertical="true"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/tv_vote"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintStart_toEndOf="@id/separator_line2"
            app:layout_constraintTop_toBottomOf="@id/img_poster"
            app:layout_constraintEnd_toEndOf="parent"
            android:textStyle="bold"
            tools:text="1000"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintStart_toEndOf="@id/separator_line2"
            app:layout_constraintTop_toBottomOf="@id/tv_vote"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            android:text="@string/total_votes" />

        <TextView
            android:id="@+id/tv_synopsis_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/overview"
            android:layout_marginTop="24dp"
            android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_ratings_title"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tv_synopsis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:ellipsize="end"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_synopsis_title"
            tools:text="Lorem Ipsum Dolor Sit Amet" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>